--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.1.0",
+    "express-validator": "^7.3.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "xss-clean": "^0.1.4"
   }
 }
